[project]
name = "finance_crew"
version = "0.1.0"
description = "finance_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
finance_crew = "finance_crew.main:run"
run_crew = "finance_crew.main:run"
train = "finance_crew.main:train"
replay = "finance_crew.main:replay"
test = "finance_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
